Fix form still covering page when invisible

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,8 +51,12 @@ body {
     background-color: var(--btn-clr-act);
 }
 
-form {
+.form-div {
+    display: none;
     opacity: 0;
+}
+
+form {
     position: absolute;
     top: 0;
     left: 0;
